Creating of the view Dashboard, fix some linking a toogle visibility of input type password

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -3,6 +3,10 @@
     background-image: url(/vendor_asset/img/bg-image/home.png);
 }
 
+.links-orders {
+    font-weight: 700;
+}
+
 #thumb-desc-inner{
     padding-top: 0;
 }
